fix: revise code line misalignment

--- a/source/css/markdown.styl
+++ b/source/css/markdown.styl
@@ -12,7 +12,7 @@
   border-radius: 8px;
 
 .markdown-section > :not(h1):not(h2):not(h3):not(h4):not(h5):not(h6) code
-  font-size: 0.9rem;
+  font-size: inherit;
 
 .markdown-section pre > code
   color: #525252;
@@ -118,7 +118,7 @@ figure.highlight .gutter
 
 figure.highlight .line, .codeblock .line
   height: 1.3em;
-  font-size: .9rem;
+  font-size: inherit;
 
 .highlight table tbody
   border: none;
